# chipa-ta

./: .gitignore  CUSTOM_INDICATOR_REFACTOR.md  Cargo.toml  INDICATORS.md  TODO.md  TODO_INDICATORS.md  TRADER_BUILDER_GUIDE.md  TRADING_BOT_GUIDE.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: CI.yml  PyCI.yml
chipa-ta-macros/: Cargo.toml  README.md
chipa-ta-macros/examples/: test.txt  usage.rs
chipa-ta-macros/src/: lib.rs
chipa-ta-macros/tests/: integration_tests.rs
examples/: custom_indicator_demo.rs  trader_usage.rs
macros/: Cargo.toml
macros/src/: lib.rs  strategy_macro.rs
macros/src/models/: mod.rs
macros/src/py/: indicator_py_macro.rs  mod.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: defaults.rs  error.rs  helper.rs  helper_types.rs  lib.rs  stubgen.rs  traits.rs  types.rs
src/indicators/: alligator.rs  ao.rs  atr.rs  bb.rs  custom.rs  ema.rs  indicator.rs  integration_test.rs  kc.rs  macd.rs  mae.rs  mod.rs  obv.rs  rsi.rs  sd.rs  sma.rs  smma.rs  stoch.rs  super_trend.rs  tr.rs  williams_r.rs
src/math/: base.rs
src/preprocessing/: mod.rs
src/strategy/: action.rs  condition.rs  error.rs  market_data.rs  mod.rs  node.rs  platform.rs  strat.rs  wrapper.rs
src/strategy/binary/: info.rs  martingale.rs  mod.rs  modifier.rs  statistics.rs  trader.rs  trader_mut.rs
strategies/: ADVANCED_STRATEGY.md  ADVANCED_STRATEGY_V2.md
