[package]
edition = "2021"
name = "chipa-ta"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stubgen"
path = "src/stubgen.rs"


[features]
default = ["py", "js"]
js = ["dep:napi", "dep:napi-derive", "dep:napi-build", "dep:serde_json"]
py = ["dep:pyo3-stub-gen", "dep:pyo3", "dep:serde_json"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = [
    "napi4",
    "serde-json",
], optional = true }
napi-derive = { version = "2.16.13", optional = true }
pyo3 = { version = "0.25.1", features = ["multiple-pymethods"], optional = true }
pyo3-stub-gen = { version = "0.9.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0.140"

[build-dependencies]
napi-build = { version = "2.2.1", optional = true }

[profile.release]
lto = true
strip = "symbols"
