[package]
edition = "2021"
name = "chipa-ta"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stubgen"
path = "src/stubgen.rs"


[features]
default = ["strategy"]
js = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
py = ["dep:pyo3-stub-gen", "dep:pyo3"]
strategy = ["dep:async-trait", "dep:chrono"]

[dependencies]
async-trait = { version = "0.1.88", optional = true }
chrono = { version = "0.4.41", features = ["serde"], optional = true}
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = [
    "napi4",
    "serde-json",
], optional = true }
napi-derive = { version = "2.16.13", optional = true }
pyo3 = { version = "0.25.1", features = [
    "multiple-pymethods",
], optional = true }
pyo3-stub-gen = { version = "0.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"

[dev-dependencies]
quick-xml = { version = "0.37.5", features = ["serialize"] }
rmp-serde = "1.3.0"
ron = "0.10.1"
serde-pickle = "1.2.0"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
serde_rosmsg = "0.2.0"
serde_starlark = "0.1.17"
serde_yaml = "0.9.34"
toml = "0.8.23"

[build-dependencies]
napi-build = { version = "2.2.1", optional = true }

[profile.release]
lto = true
strip = "symbols"
