
[package]
edition = "2024"
name = "chipa-ta"
version = "0.1.0"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "stubgen"
path = "src/stubgen.rs"

[features]
default = ["strategy","chipa_lang"]
js = ["dep:napi","dep:napi-derive","dep:napi-build"]
py = ["dep:pyo3-stub-gen","dep:pyo3"]
strategy = ["dep:async-trait","dep:chrono"]
chipa_lang = ["dep:chipa-lang-utils"]

[dependencies]
futures-util = "0.3.31"
thiserror = "2.0.12"
tracing = "0.1.41"

[dependencies.chipa-lang-utils]
path = "../chipa-lang-utils"
version = "0.1.0"
optional = true

[dependencies.chipa-ta-macros]
path = "chipa-ta-macros"
version = "0.1.0"

[dependencies.async-trait]
version = "0.1.88"
optional = true

[dependencies.chrono]
version = "0.4.41"
features = ["serde"]
optional = true

[dependencies.napi]
version = "3.1.1"
default-features = false
features = ["napi4","serde-json"]
optional = true

[dependencies.napi-derive]
version = "3.1.0"
optional = true

[dependencies.pyo3]
version = "0.25.1"
features = ["multiple-pymethods"]
optional = true

[dependencies.pyo3-stub-gen]
version = "0.10.0"
optional = true

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.141"

[dependencies.uuid]
version = "1.17.0"
features = ["serde"]

[dev-dependencies]
rmp-serde = "1.3.0"
ron = "0.10.1"
serde-pickle = "1.2.0"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
serde_rosmsg = "0.2.0"
serde_starlark = "0.1.17"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.2"
tracing-subscriber = "0.3.19"

[dev-dependencies.quick-xml]
version = "0.38.0"
features = ["serialize"]

[dev-dependencies.tokio]
version = "1.46.1"
features = ["full"]

[build-dependencies.napi-build]
version = "2.2.2"
optional = true

[profile.release]
lto = true
strip = "symbols"
